--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   workflow_dispatch:
   schedule:
-    - cron: '*/20 * * * *'  # optional auto-deploy so Agent Mode can rely on it
+    - cron: '*/20 * * * *'  # optional: auto-deploy so Agent Mode can rely on it
 
 permissions:
   contents: write  # allow committing to docs/progress-log.md
@@ -31,12 +31,16 @@ jobs:
       - name: Install Forge CLI
         run: npm install -g @forge/cli
 
+      # <<< FIX: set analytics consent BEFORE any other forge command >>>
+      - name: Set Forge analytics consent (non-interactive)
+        run: |
+          forge settings set usage-analytics false
+
       - name: Authenticate Forge (non-interactive)
         env:
           FORGE_EMAIL: ${{ secrets.FORGE_EMAIL }}
           FORGE_API_TOKEN: ${{ secrets.FORGE_API_TOKEN }}
         run: |
-          forge logout || true
           forge login --email "${FORGE_EMAIL}" --token "${FORGE_API_TOKEN}" --non-interactive
 
       - name: Install dependencies (ci if lockfile, else install)
@@ -69,9 +73,9 @@ jobs:
           ts=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
           mkdir -p docs
           if [ -f docs/progress-log.md ]; then
-            echo "[$ts] Deploy+Install success on '${GITHUB_REF_NAME}' via GitHub-hosted ubuntu. Run: $RUN_URL" >> docs/progress-log.md
+            echo "[$ts] Deploy+Install attempted on '${GITHUB_REF_NAME}' via GH-hosted ubuntu. Run: $RUN_URL" >> docs/progress-log.md
           else
-            printf "# Progress Log\n[$ts] Deploy+Install success on '%s' via GitHub-hosted ubuntu. Run: %s\n" "${GITHUB_REF_NAME}" "$RUN_URL" > docs/progress-log.md
+            printf "# Progress Log\n[$ts] Deploy+Install attempted on '%s' via GH-hosted ubuntu. Run: %s\n" "${GITHUB_REF_NAME}" "$RUN_URL" > docs/progress-log.md
           fi
           git config user.email "actions@github.com"
           git config user.name "github-actions[bot]"
