--- a/manifest.yml
+++ b/manifest.yml
@@ -1,24 +1,16 @@
-app:
-  # KEEP your existing app id exactly
-  id: f15183e3-194b-49f1-9dff-71cf5377ad84
-
 modules:
-  confluence:macro:
+  macro:
     - key: jira-issues-clone
+      resource: main
+      render: native
       title: Jira Issues Clone
-      description: Clone of the native "Jira Issues/Filter" macro
-      function: main
-
-functions:
-  main:
-    handler: index.run
-
+      description: Minimal macro scaffolding for Jira Issues Clone (modern UI Kit)
+      categories:
+        - reporting
+resources:
+  - key: main
+    path: src/frontend/index.jsx
+app:
+  id: f15183e3-194b-49f1-9dff-71cf5377ad84
 runtime:
-  nodejs: 20
-
-permissions:
-  scopes:
-    - read:confluence-content.summary
-    - read:confluence-content.all
-    - search:confluence
-    - read:page:confluence
+  name: nodejs22.x
