--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -12,6 +12,7 @@ jobs:
   forge-deploy:
     runs-on: ubuntu-latest
     env:
+      # CI auth for Forge CLI (no `forge login` in CI)
       FORGE_EMAIL: ${{ secrets.FORGE_EMAIL }}
       FORGE_API_TOKEN: ${{ secrets.FORGE_API_TOKEN }}
     defaults:
@@ -49,14 +50,43 @@ jobs:
       - name: Deploy (development)
         run: forge deploy --environment development --non-interactive
 
-      - name: Install to Confluence (development)
-        run: >
-          forge install
-          --product Confluence
-          --site petitpain.atlassian.net
-          --environment development
-          --confirm-scopes
-          --non-interactive
+      - name: Install to Confluence (development) — idempotent
+        run: |
+          set -eo pipefail
+          BASE_CMD="forge install --product confluence --site petitpain.atlassian.net --environment development --confirm-scopes --non-interactive"
+
+          echo "Attempting upgrade install..."
+          UPG_OUT="$($BASE_CMD --upgrade 2>&1)" || true
+          echo "$UPG_OUT"
+
+          if echo "$UPG_OUT" | grep -qi "already installed with id"; then
+            echo "App already installed — treating as success."
+            exit 0
+          fi
+
+          if echo "$UPG_OUT" | grep -qi "Could not find an installation"; then
+            echo "No existing install. Trying fresh install..."
+            FRESH_OUT="$($BASE_CMD 2>&1)" || true
+            echo "$FRESH_OUT"
+            if echo "$FRESH_OUT" | grep -qi "already installed with id"; then
+              echo "App already installed — treating as success."
+              exit 0
+            fi
+            # if forge returned non-zero and wasn't the benign 'already installed', fail
+            if ! echo "$FRESH_OUT" | grep -qi "completed"; then
+              echo "forge install failed"; exit 1
+            fi
+            exit 0
+          fi
+
+          # If we get here and the upgrade output didn't error, we're good.
+          if echo "$UPG_OUT" | grep -qi "completed"; then
+            echo "Upgrade install completed."
+            exit 0
+          fi
+
+          echo "forge install/upgrade failed unexpectedly"
+          exit 1
 
       - name: Upload Forge logs (if any)
         uses: actions/upload-artifact@v4
