--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -12,7 +12,6 @@ jobs:
   forge-deploy:
     runs-on: ubuntu-latest
     env:
-      # CI auth for Forge CLI (no `forge login` in CI)
       FORGE_EMAIL: ${{ secrets.FORGE_EMAIL }}
       FORGE_API_TOKEN: ${{ secrets.FORGE_API_TOKEN }}
     defaults:
@@ -56,36 +55,33 @@ jobs:
           BASE_CMD="forge install --product confluence --site petitpain.atlassian.net --environment development --confirm-scopes --non-interactive"
 
           echo "Attempting upgrade install..."
-          UPG_OUT="$($BASE_CMD --upgrade 2>&1)" || true
+          set +e
+          UPG_OUT=$($BASE_CMD --upgrade 2>&1); UPG_RC=$?
+          set -e
           echo "$UPG_OUT"
 
-          if echo "$UPG_OUT" | grep -qi "already installed with id"; then
-            echo "App already installed — treating as success."
+          # Success cases
+          if [ $UPG_RC -eq 0 ] || echo "$UPG_OUT" | grep -qiE "already installed with id|already at the latest version|at the latest"; then
+            echo "App installed/up-to-date — OK."
             exit 0
           fi
 
+          # First-time install path
           if echo "$UPG_OUT" | grep -qi "Could not find an installation"; then
-            echo "No existing install. Trying fresh install..."
-            FRESH_OUT="$($BASE_CMD 2>&1)" || true
+            echo "No previous install detected. Trying fresh install..."
+            set +e
+            FRESH_OUT=$($BASE_CMD 2>&1); FRESH_RC=$?
+            set -e
             echo "$FRESH_OUT"
-            if echo "$FRESH_OUT" | grep -qi "already installed with id"; then
-              echo "App already installed — treating as success."
+            if [ $FRESH_RC -eq 0 ] || echo "$FRESH_OUT" | grep -qiE "completed|already installed|already at the latest version|at the latest"; then
+              echo "Fresh install completed/OK."
               exit 0
             fi
-            # if forge returned non-zero and wasn't the benign 'already installed', fail
-            if ! echo "$FRESH_OUT" | grep -qi "completed"; then
-              echo "forge install failed"; exit 1
-            fi
-            exit 0
+            echo "Fresh install failed"
+            exit 1
           fi
 
-          # If we get here and the upgrade output didn't error, we're good.
-          if echo "$UPG_OUT" | grep -qi "completed"; then
-            echo "Upgrade install completed."
-            exit 0
-          fi
-
-          echo "forge install/upgrade failed unexpectedly"
+          echo "Unexpected install/upgrade failure"
           exit 1
 
       - name: Upload Forge logs (if any)
